# EscrowX

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: contract.yml  frontend.yml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/payment_vault/: Cargo.toml
contracts/payment_vault/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  polyfills.ts  vite-env.d.ts
frontend/src/components/: ConfigBanner.tsx  RequireWallet.tsx
frontend/src/components/escrow/: EscrowActions.test.tsx  EscrowActions.tsx  EscrowCard.tsx  Timeline.tsx
frontend/src/components/layout/: Footer.tsx  Layout.tsx  Logo.tsx  Navbar.tsx  NotificationBell.tsx  WalletButton.tsx  (+1 more)
frontend/src/config/: index.ts
frontend/src/contexts/: WalletContext.tsx  wallet-context.ts
frontend/src/hooks/: useAccountBalance.ts  useActivity.ts  useCreateEscrow.ts  useEscrowActions.ts  useEscrows.ts  useNotifications.test.ts  useNotifications.ts  useWallet.ts
frontend/src/pages/: CreateEscrow.tsx  Dashboard.tsx  EscrowDetails.tsx  History.tsx  Landing.tsx  NotFound.tsx  Settings.tsx
frontend/src/services/: contract.ts  storage.ts
frontend/src/test/: setup.ts
frontend/src/types/: escrow.ts  flow.ts
frontend/src/utils/: errors.test.ts  errors.ts  format.test.ts  format.ts  logger.ts  stellar.ts  validation.test.ts  validation.ts
(+11 files in other folders)
